applications/comfyui/comfyui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: comfyui
  namespace: comfyui
spec:
  selector: {}
  ports:
    - name: http
      port: 8188
      targetPort: http
